--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,7 @@ jobs:
       uses: actions/checkout@master
 
     - name: Install and Build
-    - run: |
-        npm install
-        npm run build
+    - run: npm install && npm run build
 
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@v4.2.2
