--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "autoprefixer": "^10.4.2",
     "mini-css-extract-plugin": "2.4.5",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "resolutions": {
     "mini-css-extract-plugin": "2.4.5"
