--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,44 +1,44 @@
 {
-  "short_name": "Todo App",
+  "short_name": "Todo",
   "name": "Todo App",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "48x48",
       "type": "image/x-icon"
     },
     {
-      "src": "icon@x48.png",
+      "src": "todo@x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "icon@x72.png",
+      "src": "todo@x72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "icon@x96.png",
+      "src": "todo@x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "icon@x144.png",
+      "src": "todo@x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "icon@x192.png",
+      "src": "todo@x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icon@x512.png",
+      "src": "todo@x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
