--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,42 +2,17 @@
   "short_name": "Todo",
   "name": "Todo App",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "48x48",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "todo@x48.png",
-      "type": "image/png",
-      "sizes": "48x48"
-    },
-    {
-      "src": "todo@x72.png",
-      "type": "image/png",
-      "sizes": "72x72"
-    },
-    {
-      "src": "todo@x96.png",
-      "type": "image/png",
-      "sizes": "96x96"
-    },
-    {
-      "src": "todo@x144.png",
-      "type": "image/png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "todo@x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "todo@x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+        {
+            "src": "android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
