--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build-and-Deploy
 on:
   push:
     branches:
@@ -7,17 +7,17 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Install and Build
-      run: | 
-        npm install 
-        npm run build
+      - name: Install and Build
+        run: |
+          npm ci
+          npm run build
 
-    - name: Build and Deploy
-      uses: JamesIves/github-pages-deploy-action@v4.2.2
-      with:
-        token: ${{ secrets.ACCESS_TOKEN }}
-        branch: gh-pages
-        folder: build
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4.3.0
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
+          branch: gh-pages
+          folder: build
