--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm ci
-          npm run build
+          yarn
+          yarn build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.0
